Add Devise and create users

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,14 @@
 %nav.navbar.navbar-expand-md.navbar-fixed-top.main-nav
-  .container
+  .container-fluid
     %ul.nav.navbar-nav.mx-auto
       %li.nav-item
         %a.nav-link{:href => "#"} MustSee
     %ul.nav.navbar-nav
-      %li.nav-item
-        %a.nav-link{:href => "#"} Login
+      - if user_signed_in?
+        %li.nav-item
+          = link_to 'Log out', destroy_user_session_path, method: :delete
+      - else
+        %li.nav-item
+          = link_to 'Sign up', new_user_registration_path
+        %li.nav-item
+          = link_to 'Log in', new_user_session_path
