--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,3 @@
-%h1 Home#index
-%p Find me in app/views/home/index.html.haml
+.text-center.text-white
+    %h1 Hello on MustSee!
+    %p You must see whats on it
