--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,9 +6,9 @@
     %ul.nav.navbar-nav
       - if user_signed_in?
         %li.nav-item
-          = link_to 'Log out', destroy_user_session_path, method: :delete
+          = link_to 'Log out', destroy_user_session_path, method: :delete, class: 'btn btn-danger'
       - else
         %li.nav-item
-          = link_to 'Sign up', new_user_registration_path
+          = link_to 'Sign up', new_user_registration_path, class: 'btn btn-danger'
         %li.nav-item
-          = link_to 'Log in', new_user_session_path
+          = link_to 'Log in', new_user_session_path, class: 'btn btn-danger'
