--- a/app/views/layouts/front.html.haml
+++ b/app/views/layouts/front.html.haml
@@ -10,6 +10,7 @@
       media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    = render 'layouts/header'
-    .container
-      = yield
+    .wrapper
+      = render 'layouts/header'
+      .container
+        = yield
