--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,8 @@
 %nav.navbar.navbar-expand-md.navbar-fixed-top.main-nav
   .container-fluid
-    %ul.nav.navbar-nav.mx-auto
+    %ul.nav.navbar-nav
       %li.nav-item
-        %a.nav-link{:href => "#"} MustSee
+        %a.logo{:href => "#"} MustSee
     %ul.nav.navbar-nav
       - if user_signed_in?
         %li.nav-item
