Add notice messages to layout and validation of title for film

--- a/app/views/films/index.html.haml
+++ b/app/views/films/index.html.haml
@@ -1,5 +1,5 @@
 .row
   - @films.each do |film|
     .col-sm-3
-      = film.title
-      = image_tag film.cover_img, class: 'img-fluid'
+      = link_to film.title, film_path(film)
+      = link_to image_tag(film.cover_img, class:'img-fluid'), film_path(film)
