--- a/app/views/films/_form.html.haml
+++ b/app/views/films/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for @film do |f|
+  = f.error_notification
   = f.input :title, as: :string
   = f.input :description, as: :string
   = f.input :cover_img, as: :file
