--- a/app/views/layouts/_notice.html.haml
+++ b/app/views/layouts/_notice.html.haml
@@ -1,2 +1,6 @@
-%p.notice= notice
-%p.alert= alert
+- flash.each do |type, message|
+  %div{ class: "alert #{bootstrap_class_for(type)} alert-dismissible fade show", role: 'alert' }
+    %button.close{ 'data-dismiss' => 'alert', type: 'button' }
+      %span{ 'aria-hidden' => 'true' } ×
+    %strong
+      = message
