--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,8 @@
   .container-fluid
     %ul.nav.navbar-nav
       %li.nav-item
-        %a.logo{:href => "#"} MustSee
+        %a.logo
+          = link_to 'MustSee', root_path
     %ul.nav.navbar-nav
       - if user_signed_in?
         %li.nav-item
