--- a/app/views/films/show.html.haml
+++ b/app/views/films/show.html.haml
@@ -1,7 +1,7 @@
 %p= @film.title
 %p= @film.description
 - if @film.film_link.attached?
-  = video_tag rails_blob_path(@film.film_link), controls: true
+  = video_tag rails_blob_path(@film.film_link), controls: true, width: '100%'
 %div
   = link_to t('destroy'), @film,
   method: :delete, data: { confirm: t('are_you_sure') }, class: 'btn btn-danger'
