--- a/app/views/films/show.html.haml
+++ b/app/views/films/show.html.haml
@@ -6,7 +6,7 @@
   - if current_user.admin?
     - if @film.film_link.attached?
       = link_to t('Remove Film'), delete_film_link_attachment_film_url(@film.film_link.id),
-      method: :delete, data: {confirm: 'are you'}, class: 'btn btn-warning'
+      method: :delete, data: {confirm: t('are_you_sure') }, class: 'btn btn-warning'
     = link_to t('Delete all'), @film,
     method: :delete, data: { confirm: t('are_you_sure') }, class: 'btn btn-danger'
   = link_to t('edit'), edit_film_path(@film), class: 'btn btn-success'
