--- a/app/views/films/show.html.haml
+++ b/app/views/films/show.html.haml
@@ -4,10 +4,8 @@
   = video_tag rails_blob_path(@film.film_link), controls: true, width: '100%'
 %div
   - if current_user.admin?
-    - if @film.film_link.attached?
-      = link_to t('Remove Film'), delete_film_link_attachment_film_url(@film.film_link.id),
-      method: :delete, data: {confirm: t('are_you_sure') }, class: 'btn btn-warning'
+    = film.delete_link
     = link_to t('Delete all'), @film,
     method: :delete, data: { confirm: t('are_you_sure') }, class: 'btn btn-danger'
-  = link_to t('edit'), edit_film_path(@film), class: 'btn btn-success'
+    = link_to t('edit'), edit_film_path(@film), class: 'btn btn-success'
   = link_to t('back'), films_path, class: 'btn btn-secondary'
