--- a/app/views/films/show.html.haml
+++ b/app/views/films/show.html.haml
@@ -4,7 +4,9 @@
   = video_tag rails_blob_path(@film.film_link), controls: true, width: '100%'
 %div
   - if current_user.admin?
-    = film.delete_link
+    - if @film.film_link.attached?
+      = link_to 'Delete film', film_attachment_path(@film, @film.film_link.id),
+      method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-warning'
     = link_to 'Delete all', @film,
     method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
     = link_to 'Edit', edit_film_path(@film), class: 'btn btn-success'
