--- a/app/views/layouts/front.html.haml
+++ b/app/views/layouts/front.html.haml
@@ -6,6 +6,7 @@
     %title Mustsee
     = csrf_meta_tags
     = csp_meta_tag
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     = stylesheet_link_tag    'application',
       media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
