--- a/app/views/films/show.html.haml
+++ b/app/views/films/show.html.haml
@@ -4,7 +4,7 @@
   = video_tag rails_blob_path(@film.film_link), controls: true, width: '100%'
 %div
   - if current_user.try(:admin?)
-
+    = film.delete_link
     = link_to 'Delete all', @film,
     method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'
     = link_to 'Edit', edit_film_path(@film), class: 'btn btn-success'
