Fix logic in views newlines in models add null false to table

--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -2,5 +2,7 @@
   .card-body
     %h4.card-title= review.user.email
     %p.card-text
-      Rating: #{review.rating} Review#{review.review_body}
+      Rating: #{review.rating}
+      %br/
+      Review: #{review.review_body}
 %br/
