--- a/app/views/films/index.html.haml
+++ b/app/views/films/index.html.haml
@@ -1,7 +1,8 @@
 .row
   - @films.each do |film|
     .col-sm-3
-      = link_to film.title, film_path(film)
+      %p.text-center
+        = link_to film.title, film_path(film)
       = link_to image_tag(film.cover_img, class:'img-fluid'), film_path(film)
-      %p
-      Average ratings: #{film.reviews.average(:rating).round(2) if film.reviews.exists?}
+      %p.text-center
+        = film.rating_avg
