Save film progress by seting data in local storage

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,3 +11,9 @@ li.nav-item{
   background-repeat: no-repeat;
   box-shadow: 0 3000px rgba(31, 30, 31, 0.8) inset;
 }
+#mustsee-video{
+  width: 100%;
+}
+.film-name{
+  text-align:center
+}
