--- a/app/views/films/_form.html.haml
+++ b/app/views/films/_form.html.haml
@@ -1,3 +1,8 @@
+= form_tag new_film_path, method: :get do
+  %label Title:
+  = text_field_tag :search, params[:search]
+  = text_field_tag :year, params[:year]
+  %button search
 = simple_form_for @film do |f|
   = f.error_notification
   = f.input :title, as: :string
