Add BS4 view for search

--- a/app/views/films/_form.html.haml
+++ b/app/views/films/_form.html.haml
@@ -1,8 +1,10 @@
 = form_tag new_film_path, method: :get do
-  %label Title:
-  = text_field_tag :search, params[:search]
-  = text_field_tag :year, params[:year]
-  %button search
+  %label Search film:
+  .input-group.mb-3
+    = text_field_tag :search, params[:search], placeholder: 'Enter film title', class: 'form-control'
+    = text_field_tag :year, params[:year], placeholder: 'Enter film release year', class: 'form-control'
+    .input-group-append
+      %button.btn.btn-primary search
 = simple_form_for @film do |f|
   = f.error_notification
   = f.input :title, as: :string
