Delete unused style

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,13 +10,12 @@ li.nav-item{
   background-position: center;
   background-repeat: no-repeat;
   box-shadow: 0 3000px rgba(31, 30, 31, 0.8) inset;
+  text-align: center;
 }
 #mustsee-video{
   width: 100%;
 }
-.film-name{
-  text-align:center
-}
+
 //direct upload
 .direct-upload {
   display: inline-block;
