--- a/app/views/films/show.html.haml
+++ b/app/views/films/show.html.haml
@@ -1,4 +1,4 @@
-%h1.film-name= @film.title
+%h1.text-center= @film.title
 - if @film.film_link.attached?
   = video_tag rails_blob_path(@film.film_link), controls: true, id: 'mustsee-video'
 %p= @film.description
