--- a/app/views/films/_form.html.haml
+++ b/app/views/films/_form.html.haml
@@ -1,4 +1,4 @@
-= form_tag new_film_path, method: :get do
+= form_tag action_name, method: :get do
   %label Search film:
   .input-group.mb-3
     = text_field_tag :search, params[:search], placeholder: 'Enter film title', class: 'form-control'
