--- a/app/views/films/_form.html.haml
+++ b/app/views/films/_form.html.haml
@@ -5,7 +5,7 @@
     = text_field_tag :year, params[:year], placeholder: 'Enter film release year', class: 'form-control'
     .input-group-append
       %button.btn.btn-primary search
-%img{:src => "#{ @film_search.search.parsed_response['Poster']}"}/
+= @film_search.show_api_poster if @film_search
 = simple_form_for @film do |f|
   = f.error_notification
   = f.input :title, as: :string
